<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginActivity_TextInputLayout_AlertasDelEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginActivity_TextInputEditText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:outlineAmbientShadowColor="@color/colorPrimary"
                android:outlineSpotShadowColor="@color/colorPrimary"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginActivity_TextInputLayout_AlertasDelPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginActivity_TextInputEditText_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:outlineAmbientShadowColor="@color/colorPrimary"
                android:outlineSpotShadowColor="@color/colorPrimary"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/LoginActivity_Button_BotonIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/ingresar"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />

        <Button
            android:id="@+id/LoginActivity_Button_BotonRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/registrarse"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />

        <!--Este LoginButton te lo provee Facebook (No se puede modificar completamente a gusto, se debe mantener las reglas de facebook)-->

        <com.facebook.login.widget.LoginButton
            android:id="@+id/LoginActivity_LoginButton_FacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />


        <TextView
            android:id="@+id/LoginActivity_TextView_IngresarSinRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/ingresar_sin_registrarse"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>