<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    android:alpha="1"
    android:id="@+id/UsuarioActivity_ConstraintLayout"
    tools:context=".view.activity.AltaYPerfilUsuario">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.mahfa.dnswitch.DayNightSwitch
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:id="@+id/UsuarioActivity_DayNightSwitch"
            app:layout_constraintTop_toTopOf = "parent">
        </com.mahfa.dnswitch.DayNightSwitch>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/UsuarioActivity_ImageView_imagenUsuario"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsuarioActivity_TextInputLayout_AlertaDelNombre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsuarioActivity_TextInputEditText_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColorHint="@color/colorTexto"
                android:textColor="@color/colorTexto"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/nombre" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsuarioActivity_TextInputLayout_AlertasDelApellido"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsuarioActivity_TextInputEditText_Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTexto"
                android:textColorHint="@color/colorTexto"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:hint="@string/apellido"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/UsuarioActivity_Button_CargarImagen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/cargar_imagen"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />

        <Button
            android:id="@+id/UsuarioActivity_Button_GuardarCambios"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/guardar_cambios"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>